# mtkcore

./: CMakeLists.txt
include/mtk/: core.hpp  core.inl  global.hpp  linalg.hpp  linalg_fwd.hpp
include/mtk/core/: allocator_traits.hpp  assert.hpp  casts.hpp  container_traits.hpp  flag_operators.hpp  guarded_ptr.hpp  iterator_traits.hpp  math.hpp  os.hpp  preprocessor.hpp  result.hpp  saturated_integer.hpp  scope_guard.hpp  trigonometry.hpp  type_traits.hpp  typepun_cast.hpp  types.hpp
include/mtk/linalg/: matrix.hpp  matrix_base.hpp  matrix_container_interface.hpp  matrix_dynamic.hpp  matrix_fixed.hpp  matrix_interface.hpp  matrix_partial_dynamic.hpp  matrix_square_interface.hpp  vector_interface.hpp
src/mtk/: core.cpp
src/mtk/core/: assert.cpp  builtin_type_wrapper.hpp  guarded_ptr.cpp  math.cpp  math.inl  result.inl  scope_guard.cpp  trigonometry.inl
src/mtk/linalg/: matrix_det_and_inv.hpp  matrix_dynamic_vector_reference.hpp  matrix_fixed_vector_reference.hpp  matrix_impl.hpp  matrix_impl_fwd.hpp  matrix_step_iterator.hpp  matrix_vector_iterator.hpp
tests/: CMakeLists.txt  main.cpp
tests/core/: allocator_traits.cpp  casts.cpp  container_traits.cpp  flag_operators.cpp  guarded_ptr.cpp  iterator_traits.cpp  math.cpp  result.cpp  saturated_integer.cpp  scope_guard.cpp  trigonometry.cpp  type_traits.cpp  types.cpp
tests/linalg/: matrix.cpp  matrix_assignment_and_transposed.cpp  matrix_constructors_dynamic_types.cpp  matrix_constructors_shared.cpp  matrix_defs.hpp  matrix_rows_cols.cpp
